# archviz-sketch

./: CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
archviz_sketch/: __init__.py  cli.py  engine.py  mcp_server.py
examples/: hand-drawn-chart-spec.json
references/: gotchas.md  hand-drawn-sources.md
scripts/: grok_image.py  render_hand_drawn_chart.py
templates/prompts/: architectural-marker.md  minimal-line.md  process-draft.md  product-handdrawn.md  swiss-modernist.md  watercolor.md  xiaohei.md
