[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archviz-sketch"
version = "0.0.2"
description = "Prompt-driven sketch illustration pipeline for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.20"]

[project.scripts]
archviz-sketch = "archviz_sketch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["archviz_sketch"]
